--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chart.js": "^4.4.7",
     "next": "15.1.2",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0"
